# family-glucose

./: .gitignore  PROJECT_MEMORY.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  deps.py  enums.py  main.py  models.py  security.py
backend/app/routers/: ai.py  analytics.py  auth.py  export.py  families.py  records.py
backend/app/schemas/: ai.py  analytics.py  auth.py  family.py  record.py  standards.py
backend/app/services/: ai_parser.py  analytics.py  asr.py  csv_export.py  grading.py  time_utils.py  wechat.py
backend/deploy/: README.md  backup.sh  glucose-api.service.example  logrotate.conf.example  nginx.conf.example
backend/scripts/: dev_run.sh  init_db.py
backend/tests/: test_ai_parser_value.py  test_grading.py
docs/: 提审材料清单.md  本机调试指南.md  概要设计.md  用户隐私保护指引.md  简化版血糖记录小程序-需求规格说明书.md  血糖记事本小程序需求说明.md  项目对话记录.md
docs/codex-prompts/: B01.md  B02.md  B03.md  B04.md  B05.md  B06.md  B07.md  B08.md  B09.md  B10.md  F01.md  F02.md  F03.md  F04.md  F05.md  F06.md  F07.md  F08.md  F09.md  F10.md  README.md  T01.md
docs/mockups/: index.html
docs/tasks/: 00-任务总览.md  B01-后端项目初始化.md  B02-数据模型与建表.md  B03-微信登录与JWT鉴权.md  B04-家庭管理API.md  B05-血糖记录CRUD与分级.md  B06-分析API.md  B07-自定义血糖标准.md  B08-CSV导出.md  B09-AI一句话解析.md  B10-生产部署.md  F01-小程序项目骨架.md  F02-工具与API封装.md  F03-加入家庭页P09.md  F04-首页P01.md  F05-手动新增P02与详情P03.md  F06-AI快记P02b.md  F07-分析tabP04P05P06.md  F08-我的与关于.md  F09-家庭管理与标准.md  F10-数据导出P11.md  T01-端到端联调与验收.md  v0.2-backlog.md
miniprogram/: app.js  app.json  app.wxss  project.config.json
(+71 files in other folders)
