[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glucose-api"
version = "0.1.0"
description = "家有糖人 FastAPI 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.*",
    "uvicorn[standard]==0.29.*",
    "sqlmodel==0.0.16",
    "python-jose[cryptography]==3.3.*",
    "httpx==0.27.*",
    "pydantic-settings==2.2.*",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools]
packages = ["app", "app.routers", "app.schemas", "app.services"]
